--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ section h2 {
 
 /* Content Section Styles */
 .content {
-    background-image: url(./benja/Untitled\ Project1.jpg);
+    background-image: url(./benja/Untitled Project1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
